--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "@next/font": "13.1.2",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "formik": "^2.2.9",
+    "mongoose": "^6.8.4",
     "next": "13.1.2",
+    "next-auth": "^4.18.8",
+    "nodemailer": "^6.9.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "yup": "^0.32.11"
   }
 }
