--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.9",
     "@next/font": "13.1.2",
+    "axios": "^1.3.3",
+    "country-state-city": "^3.1.2",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "formik": "^2.2.9",
@@ -19,6 +25,7 @@
     "nodemailer": "^6.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-phone-number-input": "^3.2.19",
     "yup": "^0.32.11"
   }
 }
