--- a/package.json
+++ b/package.json
@@ -13,16 +13,18 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
+    "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "13.1.2",
     "axios": "^1.3.3",
     "country-state-city": "^3.1.2",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "formik": "^2.2.9",
+    "mongodb": "^4.14.0",
     "mongoose": "^6.8.4",
     "next": "13.1.2",
-    "next-auth": "^4.18.8",
-    "nodemailer": "^6.9.0",
+    "next-auth": "^4.19.2",
+    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-phone-number-input": "^3.2.19",
