--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "13.1.2",
     "axios": "^1.3.3",
+    "bcrypt": "^5.1.0",
     "country-state-city": "^3.1.2",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
