--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.11.9",
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "13.1.2",
+    "@tabler/icons": "^2.5.0",
     "axios": "^1.3.3",
     "bcrypt": "^5.1.0",
     "country-state-city": "^3.1.2",
@@ -22,14 +23,21 @@
     "eslint-config-next": "13.1.2",
     "formik": "^2.2.9",
     "formik-material-ui": "^4.0.0-alpha.2",
+    "material-ui-popup-state": "^5.0.4",
     "mongodb": "^4.14.0",
     "mongoose": "^6.8.4",
     "next": "13.1.2",
     "next-auth": "^4.19.2",
     "nodemailer": "^6.9.1",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-phone-number-input": "^3.2.19",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.1",
+    "slsx": "^0.0.3",
+    "tabler": "^1.0.0-alpha.8",
     "yup": "^0.32.11"
   }
 }
