--- a/package.json
+++ b/package.json
@@ -10,32 +10,40 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
+    "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.6",
+    "@heroicons/react": "^2.0.16",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
+    "@mui/x-date-pickers": "^6.0.0",
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "13.1.2",
     "@tabler/icons": "^2.5.0",
     "axios": "^1.3.3",
     "bcrypt": "^5.1.0",
     "country-state-city": "^3.1.2",
+    "date-fns": "^2.29.3",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "formik": "^2.2.9",
     "formik-material-ui": "^4.0.0-alpha.2",
+    "heroicons": "^2.0.16",
     "material-ui-popup-state": "^5.0.4",
     "mongodb": "^4.14.0",
     "mongoose": "^6.8.4",
     "next": "13.1.2",
     "next-auth": "^4.19.2",
     "nodemailer": "^6.9.1",
+    "nprogress": "^0.2.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-phone-number-input": "^3.2.19",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
+    "simplebar-react": "^3.2.1",
     "slsx": "^0.0.3",
     "tabler": "^1.0.0-alpha.8",
     "yup": "^0.32.11"
