--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-phone-number-input": "^3.2.19",
     "react-redux": "^8.0.5",
