--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "formik-material-ui": "^4.0.0-alpha.2",
     "heroicons": "^2.0.16",
     "material-ui-popup-state": "^5.0.4",
+    "mdb-react-ui-kit": "^5.1.0",
     "mongodb": "^4.14.0",
     "mongoose": "^6.8.4",
     "next": "13.1.2",
