--- a/package.json
+++ b/package.json
@@ -19,24 +19,33 @@
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "13.1.2",
     "@tabler/icons": "^2.5.0",
+    "analytics": "^0.8.1",
     "axios": "^1.3.3",
     "bcrypt": "^5.1.0",
+    "bootstrap": "^5.2.3",
     "country-state-city": "^3.1.2",
     "date-fns": "^2.29.3",
+    "dotenv": "^16.0.3",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "formik": "^2.2.9",
     "formik-material-ui": "^4.0.0-alpha.2",
+    "framer-motion": "^10.9.1",
+    "globby": "^13.1.3",
     "heroicons": "^2.0.16",
+    "isomorphic-unfetch": "^4.0.2",
     "material-ui-popup-state": "^5.0.4",
     "mdb-react-ui-kit": "^5.1.0",
     "mongodb": "^4.14.0",
     "mongoose": "^6.8.4",
     "next": "13.1.2",
     "next-auth": "^4.19.2",
+    "next-compose-plugins": "^2.2.1",
     "nodemailer": "^6.9.1",
     "nprogress": "^0.2.0",
+    "polished": "^4.2.2",
     "prop-types": "^15.8.1",
+    "rc-drawer": "^6.1.5",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
@@ -45,9 +54,14 @@
     "react-phone-number-input": "^3.2.19",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
+    "react-scroll": "^1.8.9",
+    "react-slick": "^0.29.0",
+    "react-stickynode": "^4.1.0",
+    "reactstrap": "^9.1.6",
     "simplebar-react": "^3.2.1",
     "slsx": "^0.0.3",
     "tabler": "^1.0.0-alpha.8",
+    "theme-ui": "^0.15.5",
     "yup": "^0.32.11"
   },
   "devDependencies": {
