--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^16.0.3",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "firebase": "^9.18.0",
     "formik": "^2.2.9",
     "formik-material-ui": "^4.0.0-alpha.2",
     "framer-motion": "^10.9.1",
