--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 MONGODB_SRV=mongodb+srv://universityprojectmnit:Project123@cluster0.7eompz7.mongodb.net/?retryWrites=true&w=majority
-BASE_URL=http://localhost:3000
+BASE_URL=https://university-mart.vercel.app/
 
 AUTH_SECRET=say_lalisa_love_me_lalisa_love_me_hey
 EMAIL_SERVER_USER="universitymartmnit@gmail.com"
