--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@next/font": "13.1.2",
     "analytics": "^0.8.1",
     "axios": "^1.3.3",
+    "base64-js": "^1.5.1",
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.3",
     "country-state-city": "^3.1.2",
