--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "reactstrap": "^9.1.6",
     "simplebar-react": "^3.2.1",
     "slsx": "^0.0.3",
+    "stripe": "^12.0.0",
     "theme-ui": "^0.15.5",
     "yup": "^0.32.11"
   },
