--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@emotion/styled": "^11.10.6",
     "@heroicons/react": "^2.0.16",
     "@mui/icons-material": "^5.11.9",
-    "@mui/material": "^5.11.9",
-    "@mui/x-date-pickers": "^6.0.0",
+    "@mui/material": "^5.11.16",
+    "@mui/styled-engine-sc": "^5.11.11",
+    "@mui/x-date-pickers": "^6.1.0",
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "13.1.2",
     "analytics": "^0.8.1",
@@ -25,6 +26,7 @@
     "bootstrap": "^5.2.3",
     "country-state-city": "^3.1.2",
     "date-fns": "^2.29.3",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
@@ -62,6 +64,7 @@
     "simplebar-react": "^3.2.1",
     "slsx": "^0.0.3",
     "stripe": "^12.0.0",
+    "styled-components": "^5.3.9",
     "theme-ui": "^0.15.5",
     "yup": "^0.32.11"
   },
