--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "base64-js": "^1.5.1",
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.3",
+    "cookies-next": "^2.1.1",
     "country-state-city": "^3.1.2",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
