--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "isomorphic-unfetch": "^4.0.2",
     "material-ui-popup-state": "^5.0.4",
     "mdb-react-ui-kit": "^5.1.0",
+    "moment": "^2.29.4",
     "mongodb": "^4.14.0",
     "mongoose": "^6.8.4",
     "next": "13.1.2",
